--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 				<div class="col-xl-10 offset-xl-1">
 					<div class="social-link-warp">
 						<div class="social-links">
-							<a href=""><i class="fa fa-linkedin"></i></a>
-							<a href="https://www.instagram.com/anshuman_sarda/"><i class="fa fa-instagram"></i></a>
-							<a href=""><i class="fa fa-twitter"></i></a>
+							<a href="https://www.linkedin.com/in/divyansh-h-gupta-5456291aa/"><i class="fa fa-linkedin"></i></a>
+							<a href="https://www.instagram.com/that_renaissance_kid/"><i class="fa fa-instagram"></i></a>
+							<a href="https://twitter.com/theegupta"><i class="fa fa-twitter"></i></a>
 						</div>
 						<h2 class="hidden-md hidden-sm">My Social Profiles</h2>
 					</div>
@@ -114,14 +114,14 @@
 					</div>
 					<ul class="resume-list">
 						<li>
-							<h2>2019-2020</h2>
-							<h3>32 Bytes</h3>
-							<h4>Website Development Intern</h4>
+							<h2>2020-Present</h2>
+							<h3>Caritas Kol</h3>
+							<h4>Founder & President</h4>
 						</li>
                         <li>
-							<h2>2019-Present</h2>
-							<h3>Passion Patch</h3>
-							<h4>Designer and Public Relations Officer</h4>
+							<h2>2020-Present</h2>
+							<h3>DeZyne</h3>
+							<h4>Head Website Developer </h4>
 						</li>
                         <li>
 							<h2>2020-Present</h2>
@@ -132,6 +132,16 @@
 							<h2>2020-Present</h2>
 							<h3>Verity Today</h3>
 							<h4>Website Designer and Technical Supervisor</h4>
+						</li>
+						<li>
+							<h2>2020-Present </h2>
+							<h3>Now & Me</h3>
+							<h4>Website Development & Digital Marketing Intern</h4>
+						</li>
+						<li>
+							<h2>2020-Present </h2>
+							<h3>Now & Me Kósmos - Ambassador Program </h3>
+							<h4>Team Leader - Management of 100 mental health entusiasts </h4>
 						</li>
 					</ul>
 				</div>
