--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 				<div class="col-md-4">
 					<div class="site-logo">
 						<h2><a href="#">Divyansh Gupta</a></h2>
-						<p>Programmer, Designer and Content Creator.</p>
+						<p>Programmer, Designer , Content Creator and Mental Health Enthusiast.</p>
 					</div>
 				</div>
 				<div class="col-md-8 text-md-right header-buttons">
-                    <a href="https://www.instagram.com/verity.today/" class="site-btn">Verity Today</a>
-                    <a href="https://www.instagram.com/official.passionpatch/" class="site-btn">Passion Patch</a>
-					<a href="https://www.youtube.com/channel/UChYs-_zjKRYhdMddjx-NPLw/featured?pbjreload=10" class="site-btn">YouTube</a>
+                    <a href="https://www.veritytoday.com/" class="site-btn">Verity Today</a>
+                    <a href="https://www.caritaskol.org/" class="site-btn">Caritas Kol</a>
+					<a href="https://nowandme.com/" class="site-btn">Now & Me</a>
 				</div>
 			</div>
 		</div>
