--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 							<a href="https://www.linkedin.com/in/divyansh-h-gupta-5456291aa/"><i class="fa fa-linkedin"></i></a>
 							<a href="https://www.instagram.com/that_renaissance_kid/"><i class="fa fa-instagram"></i></a>
 							<a href="https://twitter.com/theegupta"><i class="fa fa-twitter"></i></a>
+							<a href="https://nowandme.com/user/divyanshgupta"><i class="fa fa-now&me"></i></a>
 						</div>
 						<h2 class="hidden-md hidden-sm">My Social Profiles</h2>
 					</div>
